feat: remove deprecated contact outcomes (#207)
* chore: remove unused code, use Lombok

* feat: convert contactOutcome deprecated values in DB and when inputted

* chore: resolve Sonar issues